crates/toml_edit/tests/fixtures/invalid/float/nan_underscore.stderr
TOML parse error at line 1, column 18
  |
1 | nan_underscore = na_n
  |                  ^
Invalid string
Expected `"`, `'`
